--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,15 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     networks:
       - kitepea
+  test-db:
+  image: postgres:13
+  ports:
+    - 5435:5432
+  environment:
+    POSTGRES_USER: ${POSTGRES_USER}
+    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    POSTGRES_DB: ${POSTGRES_DB}
+  networks:
+    - kitepea
 networks:
   kitepea:
